--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.3",
     "prisma": "^5.3.1"
   }
 }
