--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.5.2",
     "jsonwebtoken": "^9.0.2",
     "next": "13.5.2",
+    "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.3",
+    "@types/nodemailer": "^6.4.10",
     "prisma": "^5.3.1"
   }
 }
