--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.9.2",
     "autoprefixer": "10.4.16",
+    "axios": "^1.5.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "next": "13.5.2",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
