--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:1234@localhost:3306/library-book"
+DATABASE_URL="mongodb+srv://zaanbasyar:zanuk12345@cluster0.ziz11mz.mongodb.net/library-book"
