--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.5.2",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
+    "mongodb": "^6.1.0",
     "next": "13.5.2",
     "nodemailer": "^6.9.5",
     "postcss": "8.4.30",
